objects/BICE_Solicitud_Cliente__c.object
<CustomObject>
    <fields>
        <fullName>New_Apellido_Paterno_Conyuge__c</fullName>
        <label>Apellido Paterno Cónyuge</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Apellido_Paterno__c</fullName>
        <label>Apellido Paterno</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Atencion_diferencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atención diferencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Autoriz_de_informar_a_organism_FATCA__c</fullName>
        <label>Autoriz. de informar a organism FATCA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_BCS_Circ_10672_10673_BCS__c</fullName>
        <label>BCS (Circ. 10672-10673 BCS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_BICE_Classification_del__c</fullName>
        <description>La Clasificacion BICE: solo es visible para Persona Jurídica.
(No confundir con Clasificación Comercial BICE Comercial_clasification__c que es para Personas Naturales).</description>
        <label>Clasificación BICE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANCO E INSTITUCIONES FINANCIERAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS PERSONALES</fullName>
                </value>
                <value>
                    <fullName>GRAN EMPRESA</fullName>
                </value>
                <value>
                    <fullName>INTERMEDIARIO DE VALORES</fullName>
                </value>
                <value>
                    <fullName>INVERSIONISTA INSTITUCIONAL</fullName>
                </value>
                <value>
                    <fullName>MEDIANA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>MEGA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>PERSONAS NATURALES</fullName>
                </value>
                <value>
                    <fullName>SOCIEDADES PRODUCTIVAS</fullName>
                </value>
                <value>
                    <fullName>SOCIEDAD DE INV.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Balances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Banco__c</fullName>
        <label>Banco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 FIRST BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK</fullName>
                </value>
                <value>
                    <fullName>ABN AMRO BANK (CHILE)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN EXPRESS BANK</fullName>
                </value>
                <value>
                    <fullName>AMERICAN NATIONAL BANK</fullName>
                </value>
                <value>
                    <fullName>AMTRADE BANK</fullName>
                </value>
                <value>
                    <fullName>BAC FLORIDA BANK</fullName>
                </value>
                <value>
                    <fullName>BANCA COMMERCIALE ITALIANA</fullName>
                </value>
                <value>
                    <fullName>BANCO ATLANTICO</fullName>
                </value>
                <value>
                    <fullName>BANCO BBVA</fullName>
                </value>
                <value>
                    <fullName>BANCO BICE</fullName>
                </value>
                <value>
                    <fullName>BANCO BILBAO VIZCAYA</fullName>
                </value>
                <value>
                    <fullName>BANCO CENTRAL DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO CONSORCIO</fullName>
                </value>
                <value>
                    <fullName>BANCO CREDITO INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CHILE/EDWARDS-CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO DE CREDITO E INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL DESARROLLO</fullName>
                </value>
                <value>
                    <fullName>BANCO DEL ESTADO DE CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL</fullName>
                </value>
                <value>
                    <fullName>BANCO DO BRASIL S A</fullName>
                </value>
                <value>
                    <fullName>BANCO ECONOMICO</fullName>
                </value>
                <value>
                    <fullName>BANCO EDWARDS CITI</fullName>
                </value>
                <value>
                    <fullName>BANCO EXTERIOR DE ESPANA</fullName>
                </value>
                <value>
                    <fullName>BANCO FALABELLA</fullName>
                </value>
                <value>
                    <fullName>BANCOINTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO INTERNACIONAL</fullName>
                </value>
                <value>
                    <fullName>BANCO ITAÚ CHILE</fullName>
                </value>
                <value>
                    <fullName>BANCO MERCANTIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Calle_RL__c</fullName>
        <description>Calle del representante legal para inversiones</description>
        <label>Calle RL</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Calle_comercial_Inv__c</fullName>
        <label>Calle comercial Inv</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Calle_comercial__c</fullName>
        <label>Calle comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Calle_particular_Inv__c</fullName>
        <label>Calle particular Inv</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Calle_particular__c</fullName>
        <label>Calle particular</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Calle_particular_de_Conyuge__c</fullName>
        <label>Calle particular de Cónyuge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Cargo__c</fullName>
        <description>Cargo de Cliente Persona Natural. Viene de Contact</description>
        <label>Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apoderado</fullName>
                </value>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Decorador</fullName>
                </value>
                <value>
                    <fullName>Gerente General</fullName>
                </value>
                <value>
                    <fullName>Arquitecto</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Abogado</fullName>
                </value>
                <value>
                    <fullName>Periodista</fullName>
                </value>
                <value>
                    <fullName>Gerente de Relacione</fullName>
                </value>
                <value>
                    <fullName>Jefe de Relaciones P</fullName>
                </value>
                <value>
                    <fullName>Especialista de Rela</fullName>
                </value>
                <value>
                    <fullName>Representante de Ven</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Abogado Jefe</fullName>
                </value>
                <value>
                    <fullName>Abogado Subjefe</fullName>
                </value>
                <value>
                    <fullName>Abogado Senior</fullName>
                </value>
                <value>
                    <fullName>Abogado Junior</fullName>
                </value>
                <value>
                    <fullName>Procurador</fullName>
                </value>
                <value>
                    <fullName>Gerente Contralorma</fullName>
                </value>
                <value>
                    <fullName>Asesor Tributario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Carpeta_comercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta comercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Carpeta_operativa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta operativa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Categoria_Deudor__c</fullName>
        <label>Categoría Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Celular_Comercial_Inv__c</fullName>
        <label>Celular Comercial Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Celular_particular_Inv__c</fullName>
        <label>Celular particular Inv</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Circ_57_2017_UAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular 57 2017 UAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Ciudad_o_Provincia_comercial_Inv__c</fullName>
        <label>Ciudad o Provincia comercial Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ciudad_o_Provincia_comercial__c</fullName>
        <label>Ciudad o Provincia comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ciudad_o_Provincia_particular_Inv__c</fullName>
        <label>Ciudad o Provincia particular Inv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ciudad_o_Provincia_particular__c</fullName>
        <label>Ciudad o Provincia particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ciudad_particular_de_Conyuge__c</fullName>
        <label>Ciudad particular de Cónyuge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Clasificacion_de_Riesgo_SBIF__c</fullName>
        <description>La Clasificación de riesgo SBIF solo es visible para Persona Jurídica.</description>
        <label>Clasificación de Riesgo (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Clasificacion_submargenes__c</fullName>
        <label>Clasificación submárgenes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personas</fullName>
                </value>
                <value>
                    <fullName>Clientes Corporativos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_APV__c</fullName>
        <inlineHelpText>Es Cliente de Ahorro Previsional Voluntario (APV)?</inlineHelpText>
        <label>Cliente APV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_AP__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonios con Cuentas no Administradas?</inlineHelpText>
        <label>Cliente AP Cuentas no Administradas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_ARE_s__c</fullName>
        <inlineHelpText>Es Cliente del Área de Referidos Externos (ARE&apos;s)</inlineHelpText>
        <label>Cliente ARE&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_BIA__c</fullName>
        <label>Cliente BIA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_Banco__c</fullName>
        <label>Cliente Banco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_Relacionado__c</fullName>
        <inlineHelpText>Es un Cliente Relacionado?</inlineHelpText>
        <label>Cliente Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cliente_desde__c</fullName>
        <label>Cliente desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Cluster__c</fullName>
        <label>Cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Commercial_Cellphone__c</fullName>
        <label>Teléfono móvil comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Commercial_Classification__c</fullName>
        <label>Commercial Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Commercial_FAX_Other__c</fullName>
        <description>Commercial FAX Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial FAX Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Commercial_Landline__c</fullName>
        <description>Commercial Landline, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Commercial_Phone_Other__c</fullName>
        <description>Commercial Phone Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Phone Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Comuna_RL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Comuna representante legal inversiones.</description>
        <inlineHelpText>Ingrese comuna representante legal.</inlineHelpText>
        <label>Comuna RL</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Solicitudes Creación Cliente Sebra (New Comuna RL)</relationshipLabel>
        <relationshipName>Solicitudes_Creaci_n_Cliente_Sebra1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Comuna_comercial_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial Inv</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasCCI2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Comuna_comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasNCC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Comuna_de_Direccion_Conyuge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna de Dirección Cónyuge</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Solicitudes Creación Cliente Sebra (Comuna de Dirección Cónyuge)</relationshipLabel>
        <relationshipName>Solicitudes_Creaci_n_Cliente_Sebra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Comuna_particular_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular Inv</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasNCP3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Comuna_particular__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipName>CuentasNCP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Copia_inscripcion_original__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia inscripción original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Cte_AP_Administraci_n_Cartera__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonio con Administración de Cartera</inlineHelpText>
        <label>Cliente AP con Administración Cartera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cuenta_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuenta Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Customer_Legal_Person_Consumer__c</fullName>
        <label>Customer Legal Person Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>null</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Customer_type_other_rating_c__c</fullName>
        <label>Tipo de Cliente otra clasificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gerencia Finanzas</fullName>
                </value>
                <value>
                    <fullName>Gerencia Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_DAI_de_la_Soc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAI de la Soc.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_DCV_Circ_190_SVS__c</fullName>
        <label>DCV (Circ. 190 SVS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_DeptoCasaSectorParticular_de_Conyuge__c</fullName>
        <label>Depto/casa/sector particular de Cónyuge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Descripci_n_cuenta__c</fullName>
        <label>Descripción cuenta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Deuda_Sistema_Financiero_MM_pesos__c</fullName>
        <label>Deuda Sistema Financiero (MM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Direcci_n_Comercial_DEMO__c</fullName>
        <label>Dirección Comercial DEMO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Documentaci_n_sustentatoria_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentación sustentatoria EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Ejecutivo_de_Inversiones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Inversiones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BICE_Solicitudes_Clientes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Email_Rep_Legal_Inv__c</fullName>
        <label>Email Rep Legal Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Email_comercial_Inv__c</fullName>
        <label>Email comercial Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Email_facturacion_Inv__c</fullName>
        <label>Email facturación Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Email_personal_Inv__c</fullName>
        <label>Email personal Inv</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Empleador__c</fullName>
        <label>Empleador</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Escritura_publica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escritura pública</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Estado_Civil__c</fullName>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
                <value>
                    <fullName>Convivencia Civil</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Sin Información</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Estado_Creaci_n_de_Cliente__c</fullName>
        <label>Creación Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Realizado</fullName>
                </value>
                <value>
                    <fullName>Reparos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Estado_Deudor__c</fullName>
        <label>Estado Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Estracto_Diario_Oficial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estracto Diario Oficial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_FATCA_Information__c</fullName>
        <description>Este campo lo llena el Área Clientes solamente.</description>
        <label>Información FATCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Es US Person</fullName>
                </value>
                <value>
                    <fullName>No es US Person</fullName>
                </value>
                <value>
                    <fullName>Es FFI</fullName>
                </value>
                <value>
                    <fullName>Es US Entity</fullName>
                </value>
                <value>
                    <fullName>No es US Entity</fullName>
                </value>
                <value>
                    <fullName>Es Recalcitrante</fullName>
                </value>
                <value>
                    <fullName>Pendiente Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Pertenece al Stock al 30/06/2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Fecha_Constitucion_Empresa__c</fullName>
        <label>Fecha Constitución Empresa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_Solicitud_Crear_Cliente__c</fullName>
        <label>Fecha Solicitud Crear Cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_apertura_cta_cte__c</fullName>
        <label>Fecha apertura cta cte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_creacion_Sebra__c</fullName>
        <label>Fecha creación Sebra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_de_conversi_n_a_cliente__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de conversión a cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_de_declaracion_de_margen__c</fullName>
        <label>Fecha de declaración de margen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_de_vencimiento_MAC__c</fullName>
        <label>Fecha de vencimiento MAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_declaracion_jurada_art_85__c</fullName>
        <label>Fecha declaración jurada (art. 85)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_fin_relaci_n__c</fullName>
        <label>Fecha fin relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_inicio_relaci_n__c</fullName>
        <label>Fecha inicio relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fecha_resultado_comit__c</fullName>
        <label>Fecha resultado comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Ficha_cuenta__c</fullName>
        <label>Ficha cuenta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Filial_de_participacion__c</fullName>
        <label>Filial (% de participación)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Form_Art_85__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Art. 85</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Form_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Form_FATCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form.FATCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Form_Ingreso_Maestro_de_Clientes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Ingreso Maestro de Clientes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Form_Solicitud_de_Productos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Solicitud de Productos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Giro_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requerido para crear cliente en Sebra</description>
        <label>Giro</label>
        <referenceTo>Giro__c</referenceTo>
        <relationshipName>CuentasNG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Grupo_Deudor_Relacionado__c</fullName>
        <label>Grupo Deudor Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin Grupo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>